--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["react-native"]
+  "presets": ["react-native", "stage-0"],
+  "plugins": [
+    "transform-inline-environment-variables",
+    "react-native-web"
+  ]
 }
