--- a/package.json
+++ b/package.json
@@ -4,19 +4,44 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "serve:browser": "node_modules/.bin/webpack-dev-server --config ./webpack/webpack.config.js",
     "test": "jest"
   },
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.53.3",
     "react-native-cli": "^2.0.1",
-    "react-native-table-component": "^1.1.3"
+    "react-native-table-component": "^1.1.3",
+    "react-native-web": "^0.5.3",
+    "uglify-es": "^3.3.9"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-jest": "22.4.1",
-    "babel-preset-react-native": "4.0.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-react-native-web": "^0.5.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.3.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native": "^4.0.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.0.6",
     "jest": "22.4.2",
-    "react-test-renderer": "16.2.0"
+    "path": "^0.12.7",
+    "react-dom": "^16.2.0",
+    "react-test-renderer": "16.2.0",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
+    "wdio-allure-reporter": "^0.6.0",
+    "wdio-mocha-framework": "^0.5.13",
+    "wdio-spec-reporter": "^0.1.4",
+    "webdriverio": "^4.12.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.5"
   },
   "jest": {
     "preset": "react-native"
