--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "serve:browser": "node_modules/.bin/webpack-dev-server --config ./webpack/webpack.config.js",
+    "serve:browser": "node_modules/.bin/webpack-dev-server --config ./webpack/webpack.config.js --port 8010",
     "unit-test": "jest __tests__/*.js",
     "functional-test": "wdio wdio.conf.js"
   },
